MDL-51595 theme_bootstrapbase: Fix clipping of large text in labels

--- a/theme/bootstrapbase/less/moodle/course.less
+++ b/theme/bootstrapbase/less/moodle/course.less
@@ -220,6 +220,7 @@
     display: inline;
 }
 .section .activity.modtype_label.label {
+    line-height: normal;
     font-weight: normal;
     padding: .2em;
 }
